recursion.cons.lessons.recursion.cons.Nlast.scala.code
def nlast(l:List[Int], n:Int): List[Int] = {
	def last(l:List[Int]): Int = {
  	if (l==Nil) {
    	return 0
  	} else if (l.tail==Nil) {
    	return l.head
  	} else last(l.tail)
	}
  if (n==0) {
    return Nil
  } else if (n==1) {
    return l
  } else return 
}